--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
   Minor: Data Analytics<br>
 </li>
 <li>
-  <b>Relevant Courses:</b> Mathematical Statistics, Statistical Methods in Research (SAS), Short Term Actuarial Mathematics, Theory of Probability, Database(SQL), Operations Research Mathematical Proofs, 
-  Problem Solving in Financial Mathematics, Computer Science 1(Java), Financial Mathematics, multivariable Calculus, Linear Algebra, Machine Learning(R), Long Term Actuarial Mathematics & Corporate Finance <br>
+  <b>Relevant Courses:</b> Mathematical Statistics (96), Statistical Methods in Research (97), Short Term Actuarial Mathematics (93), Theory of Probability (90), Database(SQL), Operations Research (92), Mathematical Proofs (94),
+  Problem Solving in Financial Mathematics (98), Computer Science 1-Java (94), Financial Mathematics (91), multivariable Calculus, Linear Algebra, Machine Learning(R), Long Term Actuarial Mathematics (90) & Corporate Finance (92)<br>
 </li>
 </p>
 
