--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <b>Yawen Zhang</b>, A purely 3-D geometrical solution to a complicated probability problem (Submitted to Solution to  Problem 2065, Mathematics Magazine, Under Review)
 </p>
 <p>
-  <b>Yawen Zhang, Timothy McDevitt</b>, Playing to not lose instead of playing to win (preparing)
+  <b>Yawen Zhang</b>, Timothy McDevitt, Playing to not lose instead of playing to win (preparing)
 </p>
 
 
