--- a/index.html
+++ b/index.html
@@ -61,11 +61,8 @@
 <h2> PAPER</h2>
 
 <div>
- <p>
-  <b>Yawen Zhang</b>, A purely 3-D geometrical solution to a complicated probability problem (Submitted to Solution to  Problem 2065, Mathematics Magazine, Under Review)
-</p>
 <p>
-  <b>Yawen Zhang</b>, Timothy McDevitt, Playing to not lose instead of playing to win (preparing)
+  <b>Yawen Zhang</b>, Timothy McDevitt, Go big or go home (preparing)
 </p>
 
 
