--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
 <div>
 <p>
   <b>Yawen Zhang</b>, Timothy McDevitt, Go big or go home (preparing)
+ <br> <b>Yawen Zhang</b>, A purely 3-D geometrical solution to Mathematics Magazine Problem 2065 <a href="https://arxiv.org/abs/2010.12349">[arXiv]</a>
 </p>
-
-
+	
 
 <h2>EXAMS</h2>
 
