--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 <div>
 <p>
-  <b>Yawen Zhang</b>, Timothy McDevitt, Go big or go home (preparing)
+  <b>Yawen Zhang</b>, Timothy McDevitt, Go Big or Go Home (preparing)
  <br> <b>Yawen Zhang</b>, A purely 3-D geometrical solution to Mathematics Magazine Problem 2065 <a href="https://arxiv.org/abs/2010.12349">[arXiv]</a>
 </p>
 	
