--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ faculty
 
 
 <h2>SKILLS</h2>
-<p> Computer Skills:R, Python, SQL, VBA, SAS, Mathematica, Java, Markdown and Latex </p>
+<p> Computer Skills:R, SQL, SAS, Mathematica, Java, Markdown and Latex </p>
 
 
 
