--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       223-666-1994<br>
       1668 Baugher Ave, Elizabethtown, PA 17022.
       </p>
-      <p><a href="./Yawen Zhang_CV__10-5.pdf">CV</a>,
+      <p><a href="./Yawen Zhang_Job.pdf">CV</a>,
       <a href="./personal.html">Personal</a>
       <p></p>
 			<p></p>
