--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
 <hr>
 
 <h2><font size="4" color="blue">[News]</font></h2>
+<li> Talked about "Go Big or Go Home" at the Joint Mathematics Meetings (JMM) Conference (1/7/2021)
+<a href=https://meetings.ams.org/math/jmm2021/meetingapp.cgi/Paper/3727>[link]</a>  
+</li>
 <li> Talked about "Go Big or Go Home" at the MAA EPaDel Conference (11/7/2020)
 <a href=http://sections.maa.org/epadel/meetings/2020/fall/students.php/>[link]</a>  
 </li>
