--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <hr>
 
 <h2><font size="4" color="blue">[News]</font></h2>
-<li> Talked about "Go Big or Go Home" at the Joint Mathematics Meetings (JMM) Conference (1/7/2021)
+<li> Talked about "Go Big or Go Home" at the Joint Mathematics Meetings (JMM) (1/7/2021)
 <a href="./Yawen-JMM.pdf">[link]</a>  
 </li>
 <li> Talked about "Go Big or Go Home" at the MAA EPaDel Conference (11/7/2020)
@@ -52,7 +52,7 @@
   B.S. in Actuarial Science
 </li>
 <li>
-  Major GPA: 3.62/4.0 （grade ranking #2）<br>
+  Major GPA: 3.65/4.0 （grade ranking #2）<br>
 </li>
 <li>
   Minor: Data Analytics<br>
