--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 			<p>
 			<a href="https://www.etown.edu/depts/math/actuarial-science-major.aspx">Mathematical Sciences</a><br>
 			<a href="https://www.etown.edu/">Elizabethtown College</a><br> 
-			Email:  zhangy@etown.edu<br>
+			Email:  yawenz@uchicgao.edu<br>
       223-666-1994<br>
-      1668 Baugher Ave, Elizabethtown, PA 17022.
+      5801 S Ellis Ave, Chicago, IL 60637.
       </p>
       <p><a href="./Yawen Zhang_Job.pdf">CV</a>,
       <a href="./personal.html">Personal</a>
@@ -33,6 +33,8 @@
 <hr>
 
 <h2><font size="4" color="blue">[News]</font></h2>
+<li> Admitted to the master's program in Applied Data Science at the University of Chicgao (3/15/2022)
+</li>
 <li> Talked about "Go Big or Go Home" at the Joint Mathematics Meetings (JMM) (1/7/2021)
 <a href="./Yawen-JMM.pdf">[link]</a>  
 </li>
@@ -46,20 +48,24 @@
 
 
 <h2>EDUCATION</h2>
+<p><b> University of Chicgao</b>, Chicago, IL.       (Aug.2022 - Anticipated Jan 2024)<br>
+<i>Applied Data Science</i> 
+<li>
+  Major GPA: 3.85/4.0 <br>
 <p><b> Elizabethtown College</b>, Elizabethtown, PA.       (Jan.2017 - Anticipated Dec 2020)<br>
 <i>Mathematical Sciences</i> 
 <li>
   B.S. in Actuarial Science
 </li>
 <li>
-  Major GPA: 3.65/4.0 （grade ranking #2）<br>
+  Major GPA: 3.70/4.0 （grade ranking #2）<br>
 </li>
 <li>
   Minor: Data Analytics<br>
 </li>
 <li>
-  <b>Relevant Courses:</b> Mathematical Statistics (96), Statistical Methods in Research (97), Short Term Actuarial Mathematics (93), Theory of Probability (90), Database(SQL), Operations Research (92), Mathematical Proofs (94),
-  Problem Solving in Financial Mathematics (98), Computer Science 1-Java (94), Financial Mathematics (91), multivariable Calculus, Linear Algebra, Machine Learning(R), Long Term Actuarial Mathematics (90) & Corporate Finance (92)<br>
+  <b>Relevant Courses:</b>  Machine Learning & Predictive Analytics, Advanced
+Linear Algebra for ML (Python), Statistical Analysis, Data Engineering Platforms, Mathematical Statistics, Theory of Probability, Data Science for Consulting, Data bases (SQL), Operations Research, Computer Science I, Python for Analytics, R workshop, Reinforcement Learning, Time Series Analysis and Forecasting<br>
 </li>
 </p>
 
@@ -103,7 +109,37 @@ the probability goes down as the number of strategies increases
 
 <h2>PROFESSIONAL EXPERIENCE</h2>
 <p>
-  <b>Actuarial Pricing intern |AXA XL</b> | New York City, NY  | 06/2020 – 08/2020<br>
+  <b>Claim Analytics intern |Uber</b> | San Francisco, CA  | 06/2023 – 09/2023<br>
+  <li>
+    Implemented Natural Language Processing model and dynamic clustering on 2M claims data, optimizing data pipeline via multiprocessing, and contributing to lowering insurance costs through data-driven strategies.
+  </li>
+  <li>
+    Projected monthly incident counts, providing the claims team with strategic planning and resource allocation.
+  </li>
+  <li>
+    Conducted data cleaning for Uber’s international business, resolving data issues and enhancing data quality.
+  </li>
+</p>
+
+<p>
+  <b>Actuarial Data Analyst, Insurance Product Development |TruStage</b> | Madison, WI  | 01/2021 – 08/2022<br>
+  <li>
+    Built dashboards and small tools to track performance, automated data reconciliation and analysis with R.
+  </li>
+  <li>
+    Assisted in the quarterly forecasting analysis of losses and expenses and reported the selected loss trends.
+  </li>
+  <li>
+    Collected 1M+ data using SQL, assisted in designing experiments and ran simulations to estimate losses.
+  </li>
+ <li>
+    Mentored summer interns, lead two intern projects, and gave presentations about product pricing techniques.
+  </li>
+</p>
+
+	
+<p>
+  <b>Business Intelligence Intern |AXA XL</b> | New York City, NY  | 06/2020 – 08/2020<br>
   <li>
     Researched the Predictive Analytics Models and Algorithms in insurance using R markdown
   </li>
