--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <td width="85%" align="top">
 			<h1>Yawen Zhang</h1>
 			<p>
-			<a href="https://www.etown.edu/depts/math/actuarial-science-major.aspx">Mathematical Sciences</a><br>
-			<a href="https://www.etown.edu/">Elizabethtown College</a><br> 
+			<a href="https://www.uchicago.edu/en">University of Chicago</a><br> 
 			Email:  yawenz@uchicgao.edu<br>
       223-666-1994<br>
       5801 S Ellis Ave, Chicago, IL 60637.
