--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
 <i>Applied Data Science</i> 
 <li>
   Major GPA: 3.85/4.0 <br>
+<li>
+  <b>Relevant Courses:</b>  Machine Learning & Predictive Analytics, Advanced
+Linear Algebra for ML (Python), Statistical Analysis, Data Engineering Platforms, Mathematical Statistics, Theory of Probability, Data Science for Consulting, Data bases (SQL), Operations Research, Computer Science I, Python for Analytics, R workshop, Reinforcement Learning, Time Series Analysis and Forecasting<br>
+</li>
 <p><b> Elizabethtown College</b>, Elizabethtown, PA.       (Jan.2017 - Anticipated Dec 2020)<br>
 <i>Mathematical Sciences</i> 
 <li>
@@ -59,21 +63,13 @@
 <li>
   Major GPA: 3.70/4.0 （grade ranking #2）<br>
 </li>
-<li>
-  Minor: Data Analytics<br>
-</li>
-<li>
-  <b>Relevant Courses:</b>  Machine Learning & Predictive Analytics, Advanced
-Linear Algebra for ML (Python), Statistical Analysis, Data Engineering Platforms, Mathematical Statistics, Theory of Probability, Data Science for Consulting, Data bases (SQL), Operations Research, Computer Science I, Python for Analytics, R workshop, Reinforcement Learning, Time Series Analysis and Forecasting<br>
-</li>
 </p>
 
 
-<h2> PAPER</h2>
+<h2> Publication</h2>
 
 <div>
 <p>
-  <b>Yawen Zhang</b>, Timothy McDevitt, Go Big or Go Home (preparing)
  <br> <b>Yawen Zhang</b>, A purely 3-D geometrical solution to Mathematics Magazine Problem 2065 <a href="https://arxiv.org/abs/2010.12349">[arXiv]</a>
 </p>
 	
@@ -82,7 +78,7 @@ Linear Algebra for ML (Python), Statistical Analysis, Data Engineering Platforms
 
 
 <p>
-Actuarial Exams: Exam Probability, Exam Financial Mathematics
+Actuarial Exams: Exam Probability, Exam Financial Mathematics, Exam Modern Actuarial Statistics-I
 </p>
 
 
@@ -108,7 +104,7 @@ the probability goes down as the number of strategies increases
 
 <h2>PROFESSIONAL EXPERIENCE</h2>
 <p>
-  <b>Claim Analytics intern |Uber</b> | San Francisco, CA  | 06/2023 – 09/2023<br>
+  <b>Claim Analytics intern | Uber</b> | San Francisco, CA  | 06/2023 – 09/2023<br>
   <li>
     Implemented Natural Language Processing model and dynamic clustering on 2M claims data, optimizing data pipeline via multiprocessing, and contributing to lowering insurance costs through data-driven strategies.
   </li>
@@ -121,7 +117,7 @@ the probability goes down as the number of strategies increases
 </p>
 
 <p>
-  <b>Actuarial Data Analyst, Insurance Product Development |TruStage</b> | Madison, WI  | 01/2021 – 08/2022<br>
+  <b>Actuarial Data Analyst, Insurance Product Development | TruStage</b> | Madison, WI  | 01/2021 – 08/2022<br>
   <li>
     Built dashboards and small tools to track performance, automated data reconciliation and analysis with R.
   </li>
@@ -138,7 +134,7 @@ the probability goes down as the number of strategies increases
 
 	
 <p>
-  <b>Business Intelligence Intern |AXA XL</b> | New York City, NY  | 06/2020 – 08/2020<br>
+  <b>Business Intelligence Intern | AXA XL</b> | New York City, NY  | 06/2020 – 08/2020<br>
   <li>
     Researched the Predictive Analytics Models and Algorithms in insurance using R markdown
   </li>
@@ -149,13 +145,7 @@ the probability goes down as the number of strategies increases
     Extracted from internal database using SQL, and built a data visualization dashboard that offers data insights using R Shiny
   </li>
   <li>
-    Guided the NA Property actuarial team to visualize the data using R shiny 
-  </li>
-  <li>
     Prepared consolidation reports using R and provided the metrics for leadership team to review
-  </li>
-  <li>
-    Created an excel template for premium allocation and surcharge calculations to support the underwriting team
   </li>
   <li>Interviewed 20+ colleagues across business functions to gain a comprehensive understanding of how 
 the company works </li> 
@@ -173,9 +163,6 @@ the company works </li>
   <li>
     Numerically analyzed and manage the investment portfolio for client trust accounts
   </li>
-  <li>
-    Reviewed and completed benefit calculations and valuation reports in excel forma
-  </li>
 
 </p>
 
@@ -191,24 +178,16 @@ faculty
 
 
 <h2>HONORS & AWARDS</h2>
+<li> Representing the Applied Data Science program at the University of Chicago while sharing my internship experience at Uber, 2023 </li>	
 <li> Outstanding Senior Student in Math Department (one student per year), 2020 </li>
 <li> Dean’s List 2020 & 2019</li>
 <li> Interviewed by AdvisorSmith as the leader student in Insurance, 2020 </li>
 <li> Honors-in-the-Discipline in Mathematics, 2020  </li>
-<li> Elizabethtown College Math Department Excellent Tutor, 2019  </li>
 <li> Pi Mu Epsilon, Pennsylvania Pi Chapter Award, 2019</li>
 
 
-
-<h2>ACTIVITIES & LEADERSHIP</h2>
-<li> President, Campus Asian Culture & Food Club, 9/2017 – 10/2018 </li>
-<li> SOA Candidate Conference Spring, 2019 </li>
-<li> Diversity Team Ambassador, Office of Admissions Elizabethtown College, 04/2017-2/2019 </li>
-<li> Inclusive Leadership Conference Spring, 2018</li>
-
-
 <h2>SKILLS</h2>
-<p> Computer Skills:R, SQL, SAS, Mathematica, Java, Markdown and Latex </p>
+<p> Computer Skills:R, Python, Spark, SQL, SAS, Mathematica, Java, Markdown and Latex </p>
 
 
 
@@ -217,7 +196,7 @@ faculty
 <br>
 <footer>
       <p>
-        *Last updated on 10/19/2020*
+        *Last updated on 09/14/2023*
       </p>
 </footer>
 
