--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
 
 <h2>EDUCATION</h2>
 <p><b> University of Chicgao</b>, Chicago, IL.       (Aug.2022 - Anticipated Jan 2024)<br>
-<i>Applied Data Science</i> 
+<i>Physical Sciences Division</i> 
+<li>
+  M.S. in Applied Data Science
+</li>
 <li>
   Major GPA: 3.85/4.0 <br>
 <li>
