--- a/personal.html
+++ b/personal.html
@@ -336,7 +336,7 @@ $('a[href*="#"]')
 					<div class="content-wrapper">
 						
 				<div id="content_om9xcpzhd" class="column-content" data-module="image">
-					<div class="ce-image" data-align="left"><img class="is-content" src="./pictures/IMG_0940.JPG" width="1497" height="1122" alt="SteamBanner" caption="" data-width="original" data-scaling="no"></div>
+					<div class="ce-image" data-align="left"><img class="is-content" src="./pictures/IMG_0940.PNG" width="1497" height="1122" alt="SteamBanner" caption="" data-width="original" data-scaling="no"></div>
 				</div>
         </div>
        </div><div id="column_o3hfqkoan" class="column" data-xl-width="4">
