--- a/personal.html
+++ b/personal.html
@@ -336,7 +336,7 @@ $('a[href*="#"]')
 					<div class="content-wrapper">
 						
 				<div id="content_om9xcpzhd" class="column-content" data-module="image">
-					<div class="ce-image" data-align="left"><img class="is-content" src="./pictures/IMG_0940.PNG" width="1497" height="1122" alt="SteamBanner" caption="" data-width="original" data-scaling="no"></div>
+					<div class="ce-image" data-align="left"><img class="is-content" src="./pictures/IMG_0940.JPG" width="1497" height="1122" alt="SteamBanner" caption="" data-width="original" data-scaling="no"></div>
 				</div>
         </div>
        </div><div id="column_o3hfqkoan" class="column" data-xl-width="4">
@@ -367,7 +367,7 @@ $('a[href*="#"]')
                 <div class="content-wrapper">
                     <div class="column-content" data-module="image">
                         <div class="ce-image" data-align="left">
-                            <img class="is-content" src="./pictures/IMG_3157.jpg" width="1497" height="1122" alt="New Image 1" caption="" data-width="original" data-scaling="no">
+                            <img class="is-content" src="./pictures/IMG_2476.jpg" width="1497" height="1122" alt="New Image 1" caption="" data-width="original" data-scaling="no">
                         </div>
                     </div>
                 </div>
@@ -378,14 +378,19 @@ $('a[href*="#"]')
                 <div class="content-wrapper">
                     <div class="column-content" data-module="image">
                         <div class="ce-image" data-align="left">
-                            <img class="is-content" src="./pictures/IMG_3157.jpg" width="1497" height="1122" alt="New Image 2" caption="" data-width="original" data-scaling="no">
+                            <img class="is-content" src="./pictures/IMG_2477.jpg" width="1497" height="1122" alt="New Image 2" caption="" data-width="original" data-scaling="no">
                         </div>
                     </div>
                 </div>
             </div>
 
             <!-- Add more columns for additional pictures as needed -->
-            
+                <div class="column" data-xl-width="4">
+                <div class="content-wrapper">
+                    <div class="column-content" data-module="image">
+                        <div class="ce-image" data-align="left">
+                            <img class="is-content" src="./pictures/IMG_2478.jpg" width="1497" height="1122" alt="New Image 2" caption="" data-width="original" data-scaling="no">
+                        </div>
         </div>
     </div>
 </div>
