--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <b>Relevant Courses:</b>  Machine Learning & Predictive Analytics, Advanced
 Linear Algebra for ML (Python), Statistical Analysis, Data Engineering Platforms, Mathematical Statistics, Theory of Probability, Data Science for Consulting, Data bases (SQL), Operations Research, Computer Science I, Python for Analytics, R workshop, Reinforcement Learning, Time Series Analysis and Forecasting<br>
 </li>
-<p><b> Elizabethtown College</b>, Elizabethtown, PA.       (Jan.2017 - Anticipated Dec 2020)<br>
+<p><b> Elizabethtown College</b>, Elizabethtown, PA.       (Jan.2017 - Dec.2020)<br>
 <i>Mathematical Sciences</i> 
 <li>
   B.S. in Actuarial Science
