--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ the probability goes down as the number of strategies increases
 
 <h2>PROFESSIONAL EXPERIENCE</h2>
 <p>
-  <b>Claim Analytics intern | Uber</b> | San Francisco, CA  | 06/2023 – 09/2023<br>
+  <b>Claims Analytics Intern | Uber</b> | San Francisco, CA  | 06/2023 – 09/2023<br>
   <li>
     Implemented Natural Language Processing model and dynamic clustering on 2M claims data, optimizing data pipeline via multiprocessing, and contributing to lowering insurance costs through data-driven strategies.
   </li>
